RELEASE NOTES

1.0.0
----------------------------------

Bug fixes
- Временно отключил модули Пулково для Шарика. Надо сделать, чтобы соответствующие сервисы не поднималимсь в зависимости от профиля: Шарик или Пулково из profile в .env
- Если нет соединения с кафкой, бэк падал. Добавил обработчик ошибки. Нужно в дальнейшем добавить периодические проверки с попытками подсоединения
- Вызов ручки сброса статуса таймлайна не должен ломаться, просто выводим в лог сообщение об ошибке


Features
- Переменная для логания logger, единообразно
- winston логгер, все логи в папку ./logs корня проекта
- Копирование истории для третички, первички, парковок, машинок и метео
- Скрипт для создания таблиц истории npm run db:create-history-tables
- Отдельные проперти для шедулинга копирования истории, чистка истории свыше X дней
- Проверка при старте нужных приложению сеттингов в .env файле
- Добавил интерфейсы для запроса состояния аэропорта одной ручкой, а не пачкой запросов по каждому типу. Ручка возврата состояния аэропорта готова
- Копирование истории на бэке можно отключить флагом disableCopyHistory в файле .env