@@ -10,6 +10,61 @@ import { difference, head } from "lodash";
 import { DATE_TIME_FORMAT, EMPTY_STRING } from "src/auth/consts";
 import dayjs from "../utils/dayjs";
 import { HistoryErrorCodeEnum, HistoryBadStateException } from "./user.bad.status.exception";
+import OmnicomHistory from "src/db/models/scoutHistory.model";
+
+
+// В нашем mysql почему-то не работают оконные (over partition) функции
+// Потому, чтобы нумеровать строки с одинаковым временем, использую
+// @id := if(...)
+// Внешний select под insert'ом отбрасывает лишнюю колонку prevTime,
+// нужную только для нумерования строк по группам одинакового времени
+const insertToiHistorySql = (tableName: string, timeStart: Date, timeEnd: Date) =>
+  `INSERT INTO ${tableName} (
+    step, time, 
+    coordinates,
+    Name, curs, alt, faza, Number, type,
+    formular
+  )
+  SELECT 	
+  step, time, 
+  coordinates,
+  Name, curs, alt, faza, Number, type,
+  formular
+FROM (
+  SELECT 
+    @id := if(@prev_time = time, @id, @id + 1) AS step,
+    @prev_time := time AS prevTime, time,
+    coordinates,
+    Name, curs, alt, faza, Number, type,
+    formular
+  FROM toi_history
+  , (select @id := 0, @prev_time := null) AS t
+  WHERE Name != '' AND Number != 0 
+    AND time <= '${dayjs.utc(timeEnd).format(DATE_TIME_FORMAT)}'
+    AND time >= '${dayjs.utc(timeStart).format(DATE_TIME_FORMAT)}'
+  ORDER BY time
+) history_record`;
+
+const insertOmnicomHistorySql = (tableName: string, timeStart: Date, timeEnd: Date) =>
+  `INSERT INTO ${tableName} (
+    step, time, 
+    Serial, GarNum, t_obn, Lat, Lon, Speed, Course, formular
+  )
+  SELECT 	
+  step, time, 
+  Serial, GarNum, t_obn, Lat, Lon, Speed, Course, formular
+FROM (
+  SELECT 
+    @id := if(@prev_time = time, @id, @id + 1) AS step,
+    @prev_time := time AS prevTime, time,
+    Serial, GarNum, t_obn, Lat, Lon, Speed, Course, formular
+  FROM omnicom_history
+  , (select @id := 0, @prev_time := null) AS t
+  WHERE Name != '' AND Number != 0 
+    AND time <= '${dayjs.utc(timeEnd).format(DATE_TIME_FORMAT)}'
+    AND time >= '${dayjs.utc(timeStart).format(DATE_TIME_FORMAT)}'
+  ORDER BY time
+) history_record`;
 
 @Injectable()
 class HistoryUserService {
@@ -19,7 +74,8 @@ class HistoryUserService {
     private readonly settingsService: SettingsService,
     private readonly configService: ApiConfigService,
     private readonly recordStatusService: RecordStatusService,
-    @InjectModel(ToiHistory) private readonly toiHistoryModel: typeof ToiHistory
+    @InjectModel(ToiHistory) private readonly toiHistoryModel: typeof ToiHistory,
+    @InjectModel(OmnicomHistory) private readonly omnicomHistoryModel: typeof OmnicomHistory
   ) {
     this.logger.log('Сервис инициализирован!')
   }
@@ -61,56 +117,27 @@ class HistoryUserService {
   private async prepareUserHistoryTable(
     tableNumber: number,
     timeStart: Date,
-    timeEnd: Date
+    timeEnd: Date,
+    historyModel?: typeof ToiHistory | typeof OmnicomHistory
   ): Promise<void> {
     const tableName = SettingsService.getRecordHistoryTableNameByIndex(tableNumber);
 
     const deleteSql = `TRUNCATE ${tableName};`;
     this.logger.log(`Предварительно очищаем таблицу ${tableName} перед вставкой истории, ${deleteSql}`);
     try {
-      await this.toiHistoryModel.sequelize.query(deleteSql);
+      await historyModel.sequelize.query(deleteSql);
     } catch (e) {
       const message = `Ошибка при очистке таблицы ${tableName}`;
       this.logger.error(message, e);
       throw new HistoryBadStateException(EMPTY_STRING, HistoryErrorCodeEnum.sqlClearTableCanNotPerfomed, message);
     }
 
-    // В нашем mysql почему-то не работают оконные (over partition) функции
-    // Потому, чтобы нумеровать строки с одинаковым временем, использую
-    // @id := if(...)
-    // Внешний select под insert'ом отбрасывает лишнюю колонку prevTime,
-    // нужную только для нумерования строк по группам одинакового времени
-    const insertSql = `
-  INSERT INTO ${tableName} (
-    step, time, 
-    coordinates,
-    Name, curs, alt, faza, Number, type,
-    formular
-  )
-  SELECT 	
-  step, time, 
-  coordinates,
-  Name, curs, alt, faza, Number, type,
-  formular
-FROM (
-  SELECT 
-    @id := if(@prev_time = time, @id, @id + 1) AS step,
-    @prev_time := time AS prevTime, time,
-    coordinates,
-    Name, curs, alt, faza, Number, type,
-    formular
-  FROM toi_history
-  , (select @id := 0, @prev_time := null) AS t
-  WHERE Name != '' AND Number != 0 
-    AND time <= '${dayjs.utc(timeEnd).format(DATE_TIME_FORMAT)}'
-    AND time >= '${dayjs.utc(timeStart).format(DATE_TIME_FORMAT)}'
-  ORDER BY time
-) history_record`;
+    const insertSql = insertToiHistorySql(tableName, timeStart, timeEnd);
     this.logger.log(`sql: ${insertSql}`);
     this.logger.log(`Ищем в истории строки от даты ${dayjs.utc(timeStart).format(DATE_TIME_FORMAT)} до ${dayjs.utc(timeEnd).format(DATE_TIME_FORMAT)}`);
 
     try {
-      await this.toiHistoryModel.sequelize.query(insertSql);
+      await historyModel.sequelize.query(insertSql);
     } catch (e) {
       const message = `Ошибка при вставке истории в таблицу ${tableName}`
       this.logger.error(message, e);
@@ -173,7 +200,7 @@ FROM (
   }
 
   async tryFillInUserHistoryTable(login: string, startTime: Date, endTime: Date, velocity: number): Promise<TimelineRecordDto> {
-    // Проверяем, вдруг юзер уже получает историю, а значит - за ним закреплена таблица
+    // Проверяем, вдруг юзер уже получает историю, а значит - за ним закреплены таблицы
     const inRecordStatus = await this.recordStatusService.isInRecordStatus(login);
 
     // Пробуем найти и выделить свободную таблицу
@@ -182,7 +209,7 @@ FROM (
       const nextFreeTableNumber = await this.getNextFreeTableNumber();
       if (nextFreeTableNumber > NO_FREE_HISTORY_RECORD_TABLE) {
         try {
-          await this.prepareUserHistoryTable(nextFreeTableNumber, startTime, endTime);
+          await this.prepareUserHistoryTable(nextFreeTableNumber, startTime, endTime, this.toiHistoryModel);
 
           // Получим номер первого и последнего шагов из сгенерированной ранее таблицы
           const { allRecs, startId, endId, } = await this.getUserHistoryInfo(
