@@ -10,10 +10,12 @@ import { RecordStatusService } from './record.status.service';
 import HistoryUserService from './history.user.service';
 import Toi from 'src/db/models/toi.model';
 import Formular from 'src/db/models/Formular.model';
+import { OmnicomModule } from 'src/omnicom/omnicom.module';
+import OmnicomHistory from 'src/db/models/scoutHistory.model';
 
 @Module({
   providers: [ToadScheduler, HistoryUserService, RecordStatusService, ToiService],
-  imports: [ApiConfigModule, SettingsModule, SequelizeModule.forFeature([Toi, Formular, ToiHistory]),],
+  imports: [ApiConfigModule, SettingsModule, OmnicomModule, SequelizeModule.forFeature([Toi, Formular, ToiHistory, OmnicomHistory]),],
   controllers: [RecordStatusController,],
   exports: [HistoryUserService, RecordStatusService,],
 })
