@@ -18,3 +18,7 @@ Features
 - Проверка при старте нужных приложению сеттингов в .env файле
 - Добавил интерфейсы для запроса состояния аэропорта одной ручкой, а не пачкой запросов по каждому типу. Ручка возврата состояния аэропорта готова
 - Копирование истории на бэке можно отключить флагом disableCopyHistory в файле .env
+- Начал переделывать сервис истории, чтобы была одна точка входа для всех 5 таблиц истории, и не было копипасты по каждой таблице
+
+ToDo
+- Нужно по аналогии с toi/toi history вызывать внутри tryFillInUserHistoryTable метод prepareUserHistoryTable для каждой из 5 исторических таблиц. А потом заполнять номерные таблицы данными из основных таблиц истории. Пока не придумал, надо ли хранить в настройках единый шаг для всех таблиц или по каждой таблице. Склоняюсь к варианту хранения по каждой таблице. Потому что сохранение может стартовать неодновременно, и исторические данные будут отличаться долями секунды
